Hatalar giderildi...